projects/amiya.akn/src/apps/*zot-registry/security/reference-grant.envoy-gateway-to-zot.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: envoy-gateway-system-to-zot
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  to:
    - group: ""
      kind: Service
      name: zot
